--- a/lib/demo_web/templates/layout/app.html.eex
+++ b/lib/demo_web/templates/layout/app.html.eex
@@ -13,12 +13,13 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+            <li><%= link "Home", to: Routes.page_path(@conn, :index) %></li>
           </ul>
         </nav>
         <a href="http://phoenixframework.org/" class="phx-logo">
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
+      <%= live_render(@conn, DemoWeb.ConnectionsLive) %>
       </div>
     </header>
 
